--- a/duck-launcher/index.html
+++ b/duck-launcher/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Duck</title>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="{{static}}js/jquery.min.js"></script>
 
-    <script type="text/javascript" src="js/plax.js"></script>
+    <script type="text/javascript" src="{{static}}js/plax.js"></script>
     <style type="text/css">
       * {
         margin: 0px;
@@ -12,32 +12,31 @@
       }
       body {
         position: fixed;
-	top:0px;
-	width:100%;
-	height:100%;
+        top:0px;
+        width:100%;
+        height:100%;
       }
-	div#box {
-		-webkit-animation: heightbg 5s infinite;
-		position:fixed;	
-		display:block;
-		height:300px;
-		bottom:0px;
-		left:0px;
-		right:0px;
-		padding:20px;
-		background-color:#426293;
-	
-		z-index:-1;
+	   div#box {
+      -webkit-animation: heightbg 5s infinite;
+      position:fixed;	
+		  display:block;
+		  height:300px;
+		  bottom:0px;
+		  left:0px;
+		  right:0px;
+		  padding:20px;
+		  background-color:#426293;
+      z-index:-1;
 
-	}
-      div#shell {
-	-webkit-animation: heightshell 5s infinite;
-        display: block;
-        position: relative;
-        margin: 200px 0px;
-        width: 600px;
-        height: 500px;
-	overflow:hidden;
+	   }
+    div#shell {
+      -webkit-animation: heightshell 5s infinite;
+      display: block;
+      position: relative;
+      margin: 200px 0px;
+      width: 600px;
+      height: 500px;
+      overflow:hidden;
       }
       div#shell{
         z-index: 1;
@@ -95,11 +94,11 @@
 		background-size:cover;
  		width: 160px;
  		height: 42px;
- 		background-image: url('img/at-sea1.png');
+ 		background-image: url('{{static}}img/at-sea1.png');
 		-webkit-transition:background-image 0.5s;
 	}
 	#link:hover {
- 		background-image: url('img/at-sea2.png');
+ 		background-image: url('{{static}}img/at-sea2.png');
 	}
     </style>
     <script type="text/javascript">
@@ -111,15 +110,14 @@
 
   </head>
   <body>
-	<a id="link" href="http://the-duck.github.io/" title="Click it"></a>
 	<div id="box">
 	</div>
     <div id="shell">
-      <img src="img/panel3.png" width="300" height="300" data-xrange="20" data-yrange="20" id="text"/>
-      <img src="img/d.png" width="600" height="600" data-xrange="40" data-yrange="40" id="front-sea"/>
-      <img src="img/panel2.png" width="300" height="300" data-xrange="10" data-yrange="10" id="panel"/>
-      <img src="img/d2.png" width="750" height="650" data-xrange="50" data-yrange="50" data-invert="true" id="middle-sea"/>
-      <img src="img/d.png" width="800" height="700" data-xrange="40" data-yrange="40" data-invert="true" id="back-sea"/>
+      <img src="{{static}}img/panel3.png" width="300" height="300" data-xrange="20" data-yrange="20" id="text"/>
+      <img src="{{static}}img/d.png" width="600" height="600" data-xrange="40" data-yrange="40" id="front-sea"/>
+      <img src="{{static}}img/panel2.png" width="300" height="300" data-xrange="10" data-yrange="10" id="panel"/>
+      <img src="{{static}}img/d2.png" width="750" height="650" data-xrange="50" data-yrange="50" data-invert="true" id="middle-sea"/>
+      <img src="{{static}}img/d.png" width="800" height="700" data-xrange="40" data-yrange="40" data-invert="true" id="back-sea"/>
     </div>
   </body>
 </html>
