--- a/files/index.html
+++ b/files/index.html
@@ -66,7 +66,9 @@
     	border-style:solid;
     	border-radius:0px;
     	border-width:1px;
-    	border-color:rgba(255,255,255,0.04);
+    	border-color:transparent;
+    	border-top-color:rgba(255,255,255,0.04);
+    	border-bottom-color:rgba(255,255,255,0.04);
     	background-color:transparent;
     	color:white;
     	font-size: 16px;
