--- a/guardian/guardian.html
+++ b/guardian/guardian.html
@@ -6,11 +6,12 @@
 		margin:0px;
 		padding:0px;
 		overflow-x:hidden;
-		font-family: Serif ;
+		font-family: "Bitter", Serif ;
 	}
 	a {
 		text-decoration: none;
 		color:#005689;
+		font-family: "Bitter", Serif ;
 	}
 	a:active {text-decoration: none;}
  	::-webkit-scrollbar {
@@ -55,14 +56,13 @@
 		margin-bottom:10px;
 		height:84px;
 		width:99%;
-		background-color:rgb(242,242,245);
+		background-color:rgba(252,252,255,0.99);
 		border-color:transparent;
 		border-width:0px;
 		border-style:solid;
 		border-top-width: 1px;
 		border-radius:2px;
 		border-top-color: #005689;
-		box-shadow:0px 2px 2px 2px rgba(0,0,0,0.2);
 		overflow:hidden;
 		visibility:hidden;
 	}
