--- a/files/index.html
+++ b/files/index.html
@@ -4,8 +4,8 @@
     <title>Duck</title>
     <style type="text/css">
  	::-webkit-scrollbar {
-		width:3px;
-		height:3px;
+		width:4px;
+		height:4px;
 	}
 	::-webkit-scrollbar-track {
 		background-color:transparent;
@@ -14,7 +14,7 @@
 	}
 	::-webkit-scrollbar-thumb {
 		-webkit-transition:background-color 0.3s;
-		background-color:rgb({{color[0]}},{{color[1]}},{{color[2]}});
+		background-color:rgb(179,179,179);
 		border-radius:1px;
 	}
     * {
@@ -115,8 +115,7 @@
     }
     #header button:active {
     	border-bottom-color: rgb(179,179,179);
-    	background-color:rgba(179,179,179,0.4);
-    }
+    	background-color:rgba(179,179,179,0.4)    }
 
     #icons {
         -webkit-animation: new-anim 0.5s;
@@ -143,7 +142,7 @@
     	background-color:rgba(255,255,255,0.03);
     }
     .app:active {
-    	background-color:rgba(255,255,255,0.04);
+    	background-color:rgba(255,255,255,0.1);
     }
     .app-img {
     	display:block;
