--- a/guardian/guardian.html
+++ b/guardian/guardian.html
@@ -15,20 +15,17 @@
 	}
 	a:active {text-decoration: none;}
  	::-webkit-scrollbar {
-		width:4px;
-		height:6px;
-		opacity:0.8;
+		width:3px;
+		height:3px;
 	}
 	::-webkit-scrollbar-track {
 		background-color:transparent;
-		border-radius:2px;
 		margin-top:2px;
 	}
 	::-webkit-scrollbar-thumb {
 		-webkit-transition:opacity 0.3s;
-		background-color:#ffffff;
+		background-color:#aad8f1;
 		opacity:0.6;
-		border-radius:5px;
 	}
 	::-webkit-scrollbar-thumb:hover {
 		opacity:1;
@@ -48,6 +45,7 @@
 	}
 	.article {
 		position:relative;
+		-webkit-transition:background-color 0.2s;
 		-webkit-animation:art-anim 0.5s ease;
 		-webkit-animation-play-state:running;
 		margin:0px;
@@ -61,10 +59,13 @@
 		border-width:0px;
 		border-style:solid;
 		border-top-width: 1px;
-		border-radius:2px;
-		border-top-color: #005689;
+		border-top-color: transparent;
 		overflow:hidden;
 		visibility:hidden;
+		box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
+	}
+	.article:hover {
+		background-color: rgba(244,244,247,1);
 	}
 	.showing {
 		visibility:visible;
